--- a/resources/fxml/MainView.fxml
+++ b/resources/fxml/MainView.fxml
@@ -2,14 +2,21 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 
-<Pane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<Pane prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/application.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
       <Button fx:id="btn1" layoutX="521.0" layoutY="41.0" mnemonicParsing="false" onAction="#Generate" text="Generate" />
-      <TextField fx:id="tf_size" layoutX="521.0" layoutY="89.0" onAction="#SizeTyped" prefHeight="25.0" prefWidth="64.0" />
+      <TextField fx:id="tf_size" layoutX="521.0" layoutY="116.0" onAction="#SizeTyped" prefHeight="25.0" prefWidth="64.0" text="10" />
       <Canvas fx:id="canvas" height="400.0" width="506.0" />
+      <Label layoutX="521.0" layoutY="99.0" text="Size :">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
