--- a/resources/fxml/MainView.fxml
+++ b/resources/fxml/MainView.fxml
@@ -4,19 +4,46 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/application.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<Pane prefHeight="533.0" prefWidth="600.0" stylesheets="@../css/application.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <Button fx:id="btn1" layoutX="521.0" layoutY="41.0" mnemonicParsing="false" onAction="#Generate" text="Generate" />
-      <TextField fx:id="tf_size" layoutX="518.0" layoutY="99.0" prefHeight="25.0" prefWidth="64.0" text="10" />
-      <Canvas fx:id="canvas" height="400.0" width="506.0" />
-      <Label layoutX="521.0" layoutY="80.0" text="Size :">
+      <Button fx:id="btn1" layoutX="518.0" layoutY="14.0" mnemonicParsing="false" onAction="#Generate" text="Generate" />
+      <TextField fx:id="tf_size" layoutX="515.0" layoutY="65.0" prefHeight="25.0" prefWidth="64.0" text="10" />
+      <Canvas fx:id="canvas" height="533.0" width="506.0" />
+      <Label layoutX="518.0" layoutY="46.0" text="Size :">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <Button fx:id="addbtn" layoutX="518.0" layoutY="175.0" mnemonicParsing="false" onAction="#add" text="Add" />
+      <Button fx:id="addbtn" layoutX="528.0" layoutY="106.0" mnemonicParsing="false" onAction="#add" text="Add" />
+      <AnchorPane fx:id="GeneticPane" layoutX="496.0" layoutY="131.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="101.0">
+         <children>
+            <TextField layoutX="24.0" layoutY="83.0" prefHeight="25.0" prefWidth="65.0" />
+            <TextField layoutX="24.0" layoutY="30.0" prefHeight="25.0" prefWidth="65.0" />
+            <TextField layoutX="24.0" layoutY="135.0" prefHeight="25.0" prefWidth="65.0" />
+            <Label layoutX="10.0" layoutY="14.0" text="Amount">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Label layoutX="10.0" layoutY="66.0" text="Sequences lenhgt">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Label layoutX="10.0" layoutY="118.0" text="Freq of Mutation">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <Button layoutX="37.0" layoutY="175.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="47.0" text="Start" />
+            <Button layoutX="37.0" layoutY="212.0" mnemonicParsing="false" text="Pause" />
+            <Button layoutX="37.0" layoutY="250.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="47.0" text="Save" />
+            <Button layoutX="37.0" layoutY="285.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="47.0" text="Reset" />
+         </children>
+      </AnchorPane>
    </children>
 </Pane>
