Slowly creating Genetic Algorithm

--- a/resources/fxml/GeneticSettingsView.fxml
+++ b/resources/fxml/GeneticSettingsView.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="334.0" prefWidth="101.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MutationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="178.0" prefWidth="101.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MutationController">
    <children>
-      <TextField fx:id="seqLen" layoutX="24.0" layoutY="83.0" prefHeight="25.0" prefWidth="65.0" />
-      <TextField fx:id="amount" layoutX="24.0" layoutY="30.0" prefHeight="25.0" prefWidth="65.0" />
-      <TextField fx:id="mutation" layoutX="24.0" layoutY="135.0" prefHeight="25.0" prefWidth="65.0" />
+      <TextField fx:id="seqLen" layoutX="24.0" layoutY="83.0" prefHeight="25.0" prefWidth="65.0" text="10" />
+      <TextField fx:id="amount" layoutX="24.0" layoutY="30.0" prefHeight="25.0" prefWidth="65.0" text="10" />
+      <TextField fx:id="mutation" layoutX="24.0" layoutY="135.0" prefHeight="25.0" prefWidth="65.0" text="1" />
       <Label layoutX="10.0" layoutY="14.0" text="Amount">
          <font>
             <Font size="10.0" />
@@ -26,9 +25,5 @@
             <Font size="10.0" />
          </font>
       </Label>
-      <Button fx:id="btStart" layoutX="37.0" layoutY="175.0" mnemonicParsing="false" onAction="#StartAction" prefHeight="25.0" prefWidth="47.0" text="Start" />
-      <Button fx:id="btPause" layoutX="37.0" layoutY="212.0" mnemonicParsing="false" onAction="#PauseAction" text="Pause" />
-      <Button fx:id="btSave" layoutX="37.0" layoutY="250.0" mnemonicParsing="false" onAction="#SaveAction" prefHeight="25.0" prefWidth="47.0" text="Save" />
-      <Button fx:id="btReset" layoutX="37.0" layoutY="285.0" mnemonicParsing="false" onAction="#ResetAction" prefHeight="25.0" prefWidth="47.0" text="Reset" />
    </children>
 </AnchorPane>
