Added Evaluation & calculating fitness

--- a/resources/fxml/GeneticSettingsView.fxml
+++ b/resources/fxml/GeneticSettingsView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="178.0" prefWidth="101.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MutationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="178.0" prefWidth="101.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EvolutionController">
    <children>
       <TextField fx:id="seqLen" layoutX="24.0" layoutY="83.0" prefHeight="25.0" prefWidth="65.0" text="10" />
       <TextField fx:id="amount" layoutX="24.0" layoutY="30.0" prefHeight="25.0" prefWidth="65.0" text="10" />
