--- a/resources/fxml/GeneticSettingsView.fxml
+++ b/resources/fxml/GeneticSettingsView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="178.0" prefWidth="101.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EvolutionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="237.0" prefWidth="101.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EvolutionController">
    <children>
       <TextField fx:id="seqLen" layoutX="24.0" layoutY="83.0" prefHeight="25.0" prefWidth="65.0" text="10" />
       <TextField fx:id="amount" layoutX="24.0" layoutY="30.0" prefHeight="25.0" prefWidth="65.0" text="10" />
@@ -21,6 +21,16 @@
          </font>
       </Label>
       <Label layoutX="10.0" layoutY="118.0" text="Freq of Mutation">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Label>
+      <Label fx:id="itLabel" layoutX="14.0" layoutY="168.0" text="Iterations: ">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Label>
+      <Label fx:id="bestLabel" layoutX="14.0" layoutY="195.0" text="Best Mover: &#10; moves">
          <font>
             <Font size="10.0" />
          </font>
